--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Спешалти Кофейня в Красной Поляне | Mechanica Механика – лучшее кофе и закуски</title>
-  <meta name="description" content="Mechanica | Механика – уютная кофейня в Красной Поляне, предлагающая широкий выбор кофе, закусок и напитков. Приходите к нам по адресу: ул. Турчинского, 90.">
-  <meta name="keywords" content="Кофейня в Красной Поляне, Кофе в горах, Уютная кофейня, Завтраки в Красной Поляне, Кофейные напитки, Сытные закуски, Кофе с видом на горы, Ресторан кофе, Кофейный бар, Кофе на Турчинского">
+  <title>Спешалти Кофейня в Красной Поляне | Механика – лучший кофе, десерты и закуски</title>
+  <meta name="description" content="Mechanica | Механика – уютная кофейня в Красной Поляне, предлагающая широкий выбор кофе, десертов, закусок и напитков. Приходите к нам по адресу: ул. Турчинского, 90.">
+  <meta name="keywords" content="Кофейня в Красной Поляне, Кофе в горах, Уютная кофейня, Завтраки в Красной Поляне, Кофейные напитки, Сытные закуски, Десерты, Кофе с видом на горы, Ресторан кофе, Кофейный бар, Кофе на Турчинского">
 
   <script src="https://cdn.tailwindcss.com"></script>
 
