fix: logo indents

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h2 class="text-6xl font-[kc] md:text-9xl">
         Mechanica
       </h2>
-      <h3 class="text-4xl font-[kc] md:text-6xl">
+      <h3 class="text-4xl font-[kc] md:text-6xl mt:-mt-4 -mt-2">
         Coffee Ex Engineer
       </h3>
     </div>
