feat: add instagram

--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@
       <div class="mt-8">
         <img src="images/shop-live.jpg" alt="">
       </div>
-      <div class="font-[oswald] mt-8 flex flex-wrap items-center gap-2 justify-between md:px-12">
+      <div class="font-[oswald] mt-8 flex flex-wrap items-center gap-3 justify-center md:px-12 md:gap-6">
         <a class="button" href="tel:+79282453759">
           Позвонить
+        </a>
+        <a class="button" href="https://www.instagram.com/mechanica.coffee">
+          Instagram
         </a>
         <a href="https://yandex.com/maps/-/CDVEYH53" class="button">
           Яндекс
@@ -73,7 +76,7 @@
           Google
         </a>
         <a href="https://go.2gis.com/wefws" class="button">
-          2 Гис
+          2Гис
         </a>
       </div>
     </div>
