--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         </a>
       </div>
     </div>
+    <div class="mt-8 relative overflow-hidden border-2 rounded-md border-black">
+      <iframe src="https://yandex.com/map-widget/v1/?ll=40.211731%2C43.681008&mode=poi&poi%5Bpoint%5D=40.211619%2C43.681327&poi%5Buri%5D=ymapsbm1%3A%2F%2Forg%3Foid%3D244015905549&utm_source=share&z=18" width="100%" height="700" frameborder="1" allowfullscreen="true" class="relative"></iframe>
+    </div>
   </main>
 
 </body>
